--- a/webapp/src/main/webapp/themes/wilma/i18n/all_pt_BR.properties
+++ b/webapp/src/main/webapp/themes/wilma/i18n/all_pt_BR.properties
@@ -6,22 +6,37 @@
 # wilma theme templates (themes/wilma/templates)
 #
 
-missing_degree = diploma em falta
-researcher_role = Papel do pesquisador
-using_cache_time = Usando informações em cache em
-co_investigators_capitalized = Co-investigadores
-role_type = Tipo de papel
-doi_link = Identificador de Objeto Digital (DOI)
-through_today = Publicações até hoje
-networks = Redes
-presentation_name = nome da apresentação
-search_service_btn = Serviço de pesquisa
-link_name = nome do link
-grants = concessões
-download = Download
-uploaded_files = Arquivos carregados 
+menu_termuse = Termos de Uso
+menu_powered = Desenvolvido por
+menu_about = Sobre
+menu_contactus = Fale Conosco
+menu_support = Suporte
+menu_version = Versão
+menu_copyright = copyright
+menu_item = item de menu
+menu_welcomestart = Bem vindo
 
+menu_logout = Sair
+menu_login = Login
+menu_loginfull = Login para o gerenciamento do site
+
+identity_title = VIVO | conectar compartilhar descobrir
+identity_index = Index
+identity_edit = Editar Página
+identity_admin = Site Admin
+identity_myprofile = Meu perfil
+identity_myaccount = Minha Conta
+identity_user = Usuário
+
+indiv_foafperson_for = para
+indiv_foafperson_return = retorno à
 uri_icon = uri ícone
+
+intro_title = Bem-vindo ao VIVO
+intro_para1 = Vivo é uma ferramenta de descobertas focada em pesquisa, que permite a colaboração entre cientistas em todas as disciplinas.
+intro_para2 = Busca ou pesquisa de informações sobre pessoas, departamentos, cursos e muito mais.
+intro_searchvivo = Buscar no VIVO
+intro_filtersearch = Filtrar busca
 
 #
 # "partial" individual templates ( /templates/freemarker/body/partials/individual )
@@ -42,6 +57,11 @@ close_date = Data de fechamento
 no_active_grants = Atualmente não há bolsas ativas para este departamento.
 view_all_active_grants = Ver todas as bolsas ativas
 
+faculty_who_are_members_of_org = Aqui estão os docentes do departamento da {0} que são membros desta organização.
+view_all_faculty = visualizar todos os docentes
+view_all_members_of_org = Ver todos os membros desta organização.
+faculty_memberships = Faculdade Associadas
+
 individuals_with_researh_area_one = Estes são os indivíduos em <a href="{1}"> {0} </a> que tenham interesse nesta área de pesquisa.
 individuals_with_researh_area_two = Estes são os indivíduos na <a href="{1}"> {0} </a> que tenham interesse nesta área de pesquisa.
 individuals_with_dept = Aqui estão os indivíduos com interesse em <a href="{1}"> {0} </a> que estão nesta organização.
@@ -52,7 +72,10 @@ view_all_faculty_in_area = Ver todos os docentes com interesse nesta área.
 faculty_research_areas = Faculdade Áreas de Investigação
 affiliated_research_areas = Afiliadas Áreas de Investigação
 affiliated_departments = Associated Departamentos
-organization = indivíduos com a área de pesquisa nessa organização
+research_area = indivíduos do departamento com pesquisa nesta área
+organização = indivíduos com a área de pesquisa nessa organização
+display_more = mais
+display_less = menos
 
 share_the_uri = compartilhar a uri
 
@@ -67,6 +90,7 @@ invalid_qr_code_parameter = Você passou um valor inválido para o parâmetro de
 research_areas = áreas de pesquisa
 
 publications_in_vivo = Publicações em VIVO
+grants_in_vivo = subsídios na Vivo
 co_author = co-autor
 co_authors = co-autores
 co_author_network = Co-autor de rede
@@ -75,6 +99,7 @@ map_of_science_capitalized = Mapa da Ciência
 co_investigator_network = co-investigador rede
 co_investigator_network_capitalized = Co-investigador da Rede
 
+Networks = redes
 co_authors_capitalized = co-autores
 
 temporal_graph = gráfico temporal
@@ -114,11 +139,12 @@ event_name = nome do evento
 missing_event = evento não encontrado
 event_label = etiqueta do vento
 
-activity_name = nome da atividade
+ACTIVITY_NAME = nome da atividade
 missing_activity = atividade não encontrada
 awarded_by = concedido pelo
 administered_by = administrado pela
 
+Presentation_name = nome de apresentação
 missing_presentation = apresentação não encontrada
 conference = conferência
 series = série
@@ -126,16 +152,23 @@ series = série
 author_name = nome do autor
 missing_author = autor não encontrado
 
+address_street_one = rua um endereço
+address_street_two = endereço de rua em dois
+address_street_three = Endereço três
+address_label = etiqueta de endereço
+
 person_name = nome de pessoa
 missing_person_in_posn = pessoa não encontrada nesta posição
 missing_person_in_role = pessoa não encontrada com este papel
 
 scopus_id_link =  ID link
 
+imagem loading_website_image = Carregando website
 click_to_view_web_page = Clique para ver o {0} da página web
 screenshot_of_webpage = captura de tela da página {0}
 click_webpage_icon = Clique no ícone webpage
 link_text = texto do link
+nome_do_link = nome do link
 no_url_provided = não foi fornecido url
 
 #
@@ -146,6 +179,7 @@ quick_view = Visualização rapida
 quick_view_icon = icone de visualizção rápido
 geographic_focus = Foco geográfico
 
+for = para
 background_top_image = imagem de fundo
 full_view_icon = ícone de visualizção completa
 profile_type = Tipo de Perfil
@@ -158,6 +192,11 @@ what_is_this = O que é isso?
 view_this_profile = Ver perfil dessa pessoa
 vcard = Vcard
 hyperlink = Hyperlink
+
+#
+# accounts templates ( /templates/freemarker/body/accounts )
+#
+password = senha
 
 #
 # harvester templates ( /templates/freemarker/body/harvester )
@@ -186,6 +225,7 @@ harvest_error_instructions_sixB = vivo / config / vivo.xml
 harvest_error_instructions_sixC = está configurado corretamente com suas informações de banco de dados e namespace.
 step_one = Passo 1
 download_template = Download template
+Download = Baixar
 step_two = Passo 2
 fill_in_data = Preencha dados
 help_capitalized = Ajuda
@@ -194,6 +234,7 @@ step_three = Passo 3
 upload_files = Enviar arquivo (s)
 upload_completed_templates = Envie seu modelo completo (s).
 upload_capitalized = Enviar
+Uploaded_files = arquivos enviados
 step_four = Passo 4
 harvest_capitalized = Receber
 click_to_harvest = Clique no botão para colher seu arquivo (s).
@@ -203,6 +244,19 @@ script_executed = Script a ser executado
 progress_capitalized = Progresso
 undefined_runtime_property = propriedade em runtime.properties está indefinido.
 define_value_for_property = Para utilizar esta funcionalidade, por favor, defina um valor para essa propriedade que aponta para o diretório de instalação do Harvester antes de reimplantar e reiniciar o aplicativo.
+
+#
+# menupage templates ( /templates/freemarker/body/menupage )
+#
+grants_text_one = Este corpo é do arquivo do modelo \
+                vivo/productMods/templates/freemarker/body/menupage/grants.ftl. \
+                No modelo de exibição, a página de doações tem um display: requiresBodyTemplate \
+                propriedade que define que a página de doações substitui o modelo padrão. \
+                O modelo padrão para estas páginas é a /vitro/webapp/web/templates/freemarker/body/menupage/menupage.ftl
+grants_two = Esta técnica pode ser usada para definir páginas sem itens do menu, que obtenha \
+                seu conteúdo a partir de um template freemarker. Um exemplo seria a página sobre.
+grants_text_three = Isso criaria uma página que usaria about.ftl como o corpo. A página seria \
+                acessada via /about e iria substituir todos os mapeamentos de servlet no web.xml.
 
 #
 # lib templates ( /templates/freemarker/body/lib )
@@ -216,6 +270,7 @@ no_research_content_found = Nenhum conteúdo encontrado.
 departments = Departamentos
 loading_map_information = Carregando as informações do mapa. . .
 verify_match_capitalized = Verificar esta combinação
+change_selection = seleção mudança
 
 #
 # custom form templates ( /templates/freemarker/edit/forms )
@@ -229,13 +284,15 @@ add_selected_concept = Adicionar Conceito Selecionado
 cannot_find_concept = Não é possível encontrar o conceito que você quer? Crie o seu próprio.
 add_concept = Adicionar Conceito
 
+attendee_capitalized = Participante
 event_type = tipo de evento
-attended = participaram
+participou = participaram
 
 manage_authors = Gerenciar Autores
 no_linked_author = autor não possui linl
 remove_author_link = remove link do autor
 add_author = Adicionar Autor
+return_to_grant = Retornar para grant
 return_to_publication = Voltar à publicação
 add_an_author = Acrescente um Autor
 person_capitalized = Pessoa
@@ -265,6 +322,9 @@ investigator_entry_for = entrada de investigador para
 investigator_capitalized = Investigator
 principal_investigator_entry_for = principal entrada investigador para
 co_principal_investigator_entry_for = co-principal entrada investigador para
+create_capitalized = Criar
+create_entry = Criar Entrada
+unable_to_handle_position_editing = Este formulário é incapaz de lidar com a edição desta posição porque está associada com vários posição de indivíduos.
 start_year_must_precede_end = O ano de início deve ser anterior ao final do ano.
 end_year_must_be_later = Final de Ano deve ser posterior ao ano de início.
 enter_or_select_grant = Por favor, Digite ou selecione um valor no campo do Nome do Grant.
@@ -273,17 +333,20 @@ years_of_grant_participation = Anos de participação no Grant
 
 leadership = liderança
 organization_type = tipo de organização
+leadership_role = Regras da Liderança
 
 membership = membro
 membership_in = membro da
 organizations = organizações
 
 organizer_of = organizador da
+organizer_role = Regras da Organização
 
 outreach_comm_service = alcance e serviço comunitário
 outreach_comm_service_in = alcance & serviço comunitário em
 
 select_or_enter_name = Selecione um valor existente ou digite um novo valor no campo Nome.
+enter_new_role_value = Por favor, insira um novo valor no campo Regras.
 presentation_entry_for = entrada apresentação para
 presentation_capitalized = Apresentação
 presentation_type = Apresentação Tipo
@@ -291,8 +354,12 @@ role_in = Regras em
 presentation_hint = eg, Moderador, Palestrante, Especialista
 presented_at = apresentado na
 selected_conference = conferência selecionada
+years_participation_in = anos de participação no
 
+grant_entry_for = entrada de concessão para
 select_existing_pub_or_enter_new = Selecione uma publicação existente no campo Título ou digite um novo.
+unable_to_handle_grant_editing = Este formulário é incapaz de lidar com a edição desta subvenção, pois está associada a vários indivíduos de subvenção.
+grant_type = Tipo de concessão
 
 publication_entry_for = entrada para publicação para
 publication_type = Tipo de Publicação
@@ -306,12 +373,14 @@ required_with_last_name = requeimento necessita um novo sobrenome
 selected_editor = Editor Selecionado
 publisher_capitalized = Publisher
 selected_publisher = Publicação Selecionada
+place_of_grant = Local de publicação
 volume_capitalized = Volume
 number_capitalized = Número
 issue_capitalized = Issue
 chapter_capitalized = Capítulo
 start_page = página inicial
 end_page = Fim Página
+grant_date = concessão Data
 selected_book = Escolhidas
 publication_date = Data da Publicação
 place_of_publication = Local de Publicação
@@ -320,6 +389,7 @@ research_activity = atividade de pesquisa
 research_activity_type = tipo de atividade da pesquisa
 
 reviewer_of = revisor da
+reviewer_role =  regras do revisor
 
 entry_for = entrada para
 specify_role_for_activity = Por favor especifique um regra para essa atividade.
@@ -327,6 +397,7 @@ start_year = Início Ano
 
 service_to_profession = serviço à profissões
 service_to_profession_in = serviço à profissões em
+service_provider_role = Provedor de Serviço de Função
 
 teaching_activity = atividade de ensino
 teaching_activity_type = ensino tipo de atividade
@@ -404,6 +475,7 @@ years_participating = anos de participação
 award_or_honor_for = prêmio ou honra para
 select_Award_or_enter_name = Selecione um valor existente ou digite um novo valor no campo de nome Premio ou Honra.
 award_honor_name = Nome do prêmio ou honra
+select_award = Premio Selecionado
 conferred_by_capitalized = conferidos pelo
 selected_conferred = Selecionado conferrer
 description = Descrição
@@ -424,6 +496,7 @@ supplemental_information = Informações Complementares
 supplemental_information_hint = (por exemplo, o título Tese, info, etc. Transferência)
 academic_studies_or_other = Estudos Acadêmicos ou outra formação
 
+edit_mailing_address = Editar Endereço para correspondência
 create_mailing_address = Criar Endereço para correspondência
 mailing_address_for = endereço de correio para
 enter_a_country = Por favor insira um valor no campo País.
@@ -444,6 +517,7 @@ posn_entry_for = posição entrada para
 within_last_10_years = dentro dos últimos 10 anos
 total = total de
 from = de
+a = a
 file = arquivo
 file_capitalized = Arquivo
 view_full_timeline_and_network = Ver cronograma completo e rede de co-autor.
@@ -490,6 +564,7 @@ with_unknown_year = ano desconhecido
 with_known_year = com anos conhecido
 from_current_incomplete_year = a partir do atual ano incompleto
 
+view = visualizção
 entity_comp_error_text1 = Esta organização tem nem sub-organizações, nem as pessoas com
 entity_comp_error_text2 = no sistema.
 entity_comp_error_text3 = Por favor, visite o pleno
@@ -503,6 +578,7 @@ by_publications = por Publications
 publications_capitalized = Publicações
 grant = concessão
 granted = concedido
+concede subvenções =
 by_grants = por Grants
 grants_capitalized = Grants
 activity = atividade
@@ -543,13 +619,19 @@ currently_no_constructed_models = modelos Atualmente não há são construídos 
 #
 #  person level templates ( /templates/freemarker/visualization/personlevel)
 #
+loading_data = carregamento de dados
 co_investigator_icon icon = co-investigador
 co_authorship = co-autoria
+currently_no_papers_for = Actualmente não há {0} papéis para
 this_author = deste autor
 in_the_vivo_db = no banco de dados VIVO.
 no_papers_for = Actualmente não há papéis para
+profile_capitalized = Perfil
+vivo_profile = perfil VIVO
 publication_s_capitalized = Publicação (s)
 co_author_s_capitalized = Co-autor (es)
+first_publication = Primeira Publicação
+last_publication = Última Publicação
 incomplete_data_note1 = Nota: Esta informação está baseada exclusivamente em publicações que foram carregados no sistema VIVO. Isto pode ser apenas uma pequena amostra de trabalho total da pessoa.
 incomplete_data_note2 = Ir para página do seu perfil para entrar detalhes adicionais sobre suas publicações.
 incomplete_data_note3 = Faça login para entrar detalhes adicionais sobre suas publicações na sua página de perfil.
@@ -560,8 +642,11 @@ investigator_name = nome do investigador
 co_author_icon icon = co-autor
 currently_no_grants_for = Actualmente não há {0} bolsas para
 this_investigator = este investigador
+no_grants_for = Actualmente não há subsídios para
 grant_s_capitalized = Grant (s)
 co_investigator_s_capitalized = Co-investigador (s)
+first_grant = Primeiro Grant
+last_grant = Última Grant
 incomplete_grant_data_note1 = Nota: Esta informação está baseada exclusivamente em concessões que foram carregados no sistema VIVO. Isto pode ser apenas uma pequena amostra de trabalho total da pessoa.
 incomplete_grant_data_note2 = Ir para página do seu perfil para entrar detalhes adicionais sobre seus subsídios.
 incomplete_grant_data_note3 = Faça login para entrar detalhes adicionais sobre seus subsídios em sua página de perfil.
@@ -617,6 +702,8 @@ advising_relationship = relação aconselhamento
 
 select_or_create_organization = Selecione uma organização existente ou criar um novo.
 
+province_or_region = província ou região
+
 grant_successfully_excluded = O item foi excluído com sucesso a partir da página de perfil.
 error_excluding_grant = solicitação de processamento de erro: o item não pode ser excluída da página de perfil.
 
@@ -635,17 +722,35 @@ error_removing_webpage pedido = Erro ao processar: página web não foi removido
 #  miscellaneous javascript variables ( productMods/js)
 #
 researcher = pesquisador
+researchers = pesquisadores
+currently_no_researchers = Atualmente não há pesquisadores com um foco geográfico definido.
+countries_and_regions = países e regiões.
+countries = países
+regions = regiões
+map_states_string = estados.
+map_state_string = estado.
+statewide_locations = locais em todo o estado.
+researchers_in = pesquisadores em
+
+no_faculty_found = Nenhum membro do corpo docente encontrado.
+placeholder_image = imagem padrão
+view_all_departments = ver todos os departamentos acadêmicos
+no_departments_found = Nenhum departamento acadêmico encontrado.
 
 #
 #  individual javascript variables ( productMods/js/individual)
 #
 error_processing_type_change = solicitação de processamento de erro: os rótulos não verificadas não pôde ser excluído.
 
+display_more_ellipsis = ... mais
+show_more_content = mostrar mais conteúdo
+
 #
 #  visualization javascript variables ( productMods/js/visualization)
 #
 publications_with = Publicações com
 
+co_inestigators_capitalized = co-pesquisadores
 grants_with = Grants com
 
 vis_first_link = Primeiro
@@ -711,6 +816,7 @@ percent_activity =% de actividade
 #  miscellaneous additions
 #
 
+limit_search = busca limite
 standardview_tooltip_one = Clique para exibir a
 standardview_tooltip_two = perfil de visualização rápida.
 research_area_tooltip_one = Clique em uma área para ver os outros
@@ -721,13 +827,18 @@ country_wide_research = Research todo o País
 local_research = Research local
 selected_presentation = apresentação selecionada
 event_capitalized = Evento
+collection_capitalized = Colecção
 item_capitalized = item
 telephone_number_for = número de telefone para
 telephone_number = Número de Telefone
 enter_telephone_number = Por favor insira um valor no campo de número de telefone.
+email_address = Endereço Email
 email_address_for = endereço de e-mail para
 enter_email_address = Por favor insira um valor no campo Endereço de Email.
+full_name = Nome completo
 full_name_for = nome completo para
+first_name = Primeiro nome
+last_name = Sobrenome
 title_not_found = Título não encontrado.
 speeches_capitalized = Discursos
 theses_capitalized = Teses
@@ -754,7 +865,7 @@ enter_preferred_title = Por favor insira um valor no campo de título preferido.
 fax_number_for = número de fax para
 fax_number = Número Fax
 enter_fax_number = Por favor insira um valor no campo número de fax.
-credentials = credenciais
+credenciais = credenciais
 select_credential_or_enter_name = Por favor, insira ou selecione um valor no campo Nome de credenciais.
 type_of_credential = Tipo de Credencial
 credential_name = Nome Credencial
