Removing some French translation

--- a/webapp/src/main/webapp/themes/wilma/i18n/all.properties
+++ b/webapp/src/main/webapp/themes/wilma/i18n/all.properties
@@ -342,7 +342,7 @@ organizer_role = Organizer Role
 outreach_comm_service = outreach & community service
 outreach_comm_service_in = outreach & community service in
 
-select_or_enter_name = SVP sélectionnez une valeur existante ou entrez en une dans le champ Nom.
+select_or_enter_name = Please select an existing value or enter a new value in the Name field.
 enter_new_role_value = Please enter a new value in the Role field.
 presentation_entry_for = presentation entry for
 presentation_capitalized = Presentation
