Removing changes out of scope of the Ticket.

--- a/webapp/src/main/webapp/themes/wilma/i18n/all.properties
+++ b/webapp/src/main/webapp/themes/wilma/i18n/all.properties
@@ -887,15 +887,7 @@ through_today = Publications through today's date
 doi_link=Digital Object Identifier (DOI)
 
 using_cache_time=Using information cached at
-no_appropriate_entry = Si vous ne trouvez pas la valeur appropriée dans la liste ci dessus
-add_new_of_type = Ajouter un nouvel élément de ce type
-login_welcome_message = Bienvenue{1, choice, 1# |1< de nouveau}, {0}
-title_capitalized = Titre
-create_new_entry = Entrer une nouvelle donnée.
-there_are_no_entries_for_selection = Il n'ya présentément aucune donnée dans le système.
-select_existing=Selectioner dans 
-save_entry=Sauvegarder
-name = nom
+
 #
 #New Entries for i18n purposes
 #
@@ -920,17 +912,17 @@ create_entry_for_organizer_role=: Add a new Organizer role
 create_entry_for_editor_role=: Add a new editor role
 create_entry_for_service_provider_role=: Add a new service provider role 
 create_entry_for_outreach_provider_role=: Add a new outreach provider role
-create_entry_for_researcher_role=: Add a reasearcher role
-create_entry_for_reviewer_role=: Add a reviewer role
-create_entry_for_teacher_role=: Add a teaching role
+create_entry_for_researcher_role=: Add a new reasearcher role
+create_entry_for_reviewer_role=: Add a new reviewer role
+create_entry_for_teacher_role=: Add a new teaching role
 
 
-save_changes=Sauvegarder
-start_capitalized = Début
-end_capitalized = Fin
-institution_name=Nom de l'Institution
-role_in_institution=Role dans l'Institution
-presentation_name_capitalized=Intitulé de la Présentation
-role_in_presentation_capitalized=Role dans la Présentation
-advisee_capitalized_first_name=Prénom 
-advisee_capitalized_lastname=Personne Conseillée: Nom
+save_changes=Save
+start_capitalized = Start
+end_capitalized = End
+institution_name=Name of Institution
+role_in_institution=Role in Institution
+presentation_name_capitalized=Title of Presentation
+role_in_presentation_capitalized=Role in Presentation
+advisee_capitalized_first_name=First Name
+advisee_capitalized_lastname=Last Name
