--- a/webapp/src/main/webapp/i18n/vivo_all.properties
+++ b/webapp/src/main/webapp/i18n/vivo_all.properties
@@ -775,20 +775,19 @@ using_cache_time=Using information cached at
 #
 #New Entries for i18n purposes
 #
-#
-edit_entry_for_head_role=: Edit this Head role
+edit_entry_for_head_role=: Edit this "head of" role
 edit_entry_for_member_role=: Edit this membership
 edit_entry_for_clinical_role=: Edit this clinical activity
 edit_entry_for_attendee_role=: Edit this participation 
-edit_entry_for_organizer_role=: Edit this Organizer role 
-edit_entry_for_editor_role=: Edit this Editor role
+edit_entry_for_organizer_role=: Edit this organizer role 
+edit_entry_for_editor_role=: Edit this editor role
 edit_entry_for_service_provider_role=: Edit this service provider role 
 edit_entry_for_outreach_provider_role=: Edit this  outreach provider role
-edit_entry_for_researcher_role=: Edit this reasearcher role
+edit_entry_for_researcher_role=: Edit this researcher role
 edit_entry_for_reviewer_role=: Edit this reviewer role
 edit_entry_for_teacher_role=: Edit this teaching role
 
-create_entry_for_head_role=: Add a new head role
+create_entry_for_head_role=: Add a new "head of" role
 create_entry_for_member_role=: Add a new membership
 create_entry_for_clinical_role=: Add a new clinical activity
 create_entry_for_attendee_role=: Add a new participation 
@@ -796,7 +795,7 @@ create_entry_for_organizer_role=: Add a new Organizer role
 create_entry_for_editor_role=: Add a new editor role
 create_entry_for_service_provider_role=: Add a new service provider role 
 create_entry_for_outreach_provider_role=: Add a new outreach provider role
-create_entry_for_researcher_role=: Add a new reasearcher role
+create_entry_for_researcher_role=: Add a new researcher role
 create_entry_for_reviewer_role=: Add a new reviewer role
 create_entry_for_teacher_role=: Add a new teaching role
 
@@ -810,3 +809,4 @@ presentation_name_capitalized=Title of Presentation
 role_in_presentation_capitalized=Role in Presentation
 advisee_capitalized_first_name=First Name
 advisee_capitalized_lastname=Last Name
+
