Replacing text in capability map Javascript file by i18n variables feeded from vivo.all.properties
Conflicts:
	webapp/src/main/webapp/js/visualization/capabilitymap/graph_new.js
	webapp/src/main/webapp/templates/freemarker/visualization/capabilitymap/capabilityMap.ftl

--- a/webapp/src/main/webapp/i18n/vivo_all.properties
+++ b/webapp/src/main/webapp/i18n/vivo_all.properties
@@ -827,3 +827,17 @@ capability_map_SVG_export_button_label=SVG
 capability_map_export_json_button_label=JSON
 capability_map_DOT_button_label=DOT
 capability_map_MRW_button_label=MRW
+
+#Removing Text from JavaScript
+capability_map_term= Term : 
+capability_map_remove_capability=Remove capability
+capability_map_expand= Expand
+capability_map_group = Group : 
+capability_map_remove_group=Remove group
+capability_map_reset =Reset
+capability_map_pause =pause
+capability_map_resume=resume
+capability_map_hide_group_labels= hide group labels
+capability_map_show_group_labels=show group labels
+capability_map_delete_selected=Delete selected
+capability_map_cutoff=Cutoff:
