--- a/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
+++ b/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
@@ -268,8 +268,8 @@ organizations = Organisationen
 
 organizer_of = Veranstalter von
 
-outreach_comm_service = Öffentlichkeitsarbeit und Gemeindedienst
-outreach_comm_service_in = Öffentlichkeitsarbeit und Gemeindedienst in
+outreach_comm_service = Öffentlichkeitsarbeit und Community-Arbeit
+outreach_comm_service_in = Öffentlichkeitsarbeit und Community-Arbeit in
 
 select_or_enter_name = Bitte im Feld Name einen bestehenden Wert auswählen oder einen neuen Wert eintragen.
 presentation_entry_for = Eintrag eines Vortrags für
@@ -346,7 +346,7 @@ manage_grants_and_projects = Forschungsprojekte & Projekte verwalten für
 check_grants_to_exclude = Markieren Sie die Forschungsprojekte und Projekte, die auf der Profilseite nicht berücksichtigt werden sollen.
 
 manage_affiliated_people = beteiligte Personen an verwalten
-check_people_to_exclude = Markieren Sie die Personen, die auf der Profilseite nicht berücksichtig werden sollen.
+check_people_to_exclude = Markieren Sie die Personen, die auf der Profilseite nicht berücksichtigt werden sollen.
 
 manage_publications_for = Publikationen für verwalten
 check_pubs_to_exclude = Markieren Sie die Publikationen, die auf der Profilseite nicht berücksichtigt werden sollen.
@@ -635,7 +635,7 @@ error_processing_type_change = Fehler bei der Bearbeitung des Auftrags: die nich
 #
 publications_with = Publikationen mit
 
-co_investigators_capitalized = Co-investigators
+co_investigators_capitalized = KoforscherInnen
 grants_with = Forschungsprojekte mit
 
 vis_first_link = erstes Ergebnis
@@ -770,43 +770,43 @@ search_service_btn = Suchdienst
 through_today = Publikationen des heutigen Tages
 doi_link = Digital Object Identifier (DOI)
 
-using_cache_time = Nutze informationen die gecacht wurden am
+using_cache_time = Die dargestellten Informationen wurden zuletzt aktualisiert am 
 
 #
 #New Entries for i18n purposes
 #
-edit_entry_for_head_role=: Edit this "head of" role
-edit_entry_for_member_role=: Edit this membership
-edit_entry_for_clinical_role=: Edit this clinical activity
-edit_entry_for_attendee_role=: Edit this participation 
-edit_entry_for_organizer_role=: Edit this organizer role 
-edit_entry_for_editor_role=: Edit this editor role
-edit_entry_for_service_provider_role=: Edit this service provider role 
-edit_entry_for_outreach_provider_role=: Edit this outreach provider role
-edit_entry_for_researcher_role=: Edit this researcher role
-edit_entry_for_reviewer_role=: Edit this reviewer role
-edit_entry_for_teacher_role=: Edit this teaching role
+edit_entry_for_head_role=: Diese Leitungsrolle bearbeiten
+edit_entry_for_member_role=: Diese Mitgliedschaft bearbeiten
+edit_entry_for_clinical_role=: Diese klinische Position bearbeiten
+edit_entry_for_attendee_role=: Diese Teilnehmerrolle bearbeiten
+edit_entry_for_organizer_role=: Diese Organisatorenrolle bearbeiten
+edit_entry_for_editor_role=: Diese Herausgeberschaft bearbeiten
+edit_entry_for_service_provider_role=: Diese Dienstleisterrolle bearbeiten
+edit_entry_for_outreach_provider_role=: Diese Öffentlichkeitsarbeitsrolle bearbeiten Edit this outreach provider role
+edit_entry_for_researcher_role=: Diese Forscherrolle bearbeiten
+edit_entry_for_reviewer_role=: Diese Begutachtungsrolle bearbeiten
+edit_entry_for_teacher_role=: Diese Rolle in der Lehre bearbeiten
 
-create_entry_for_head_role=: Add a new "head of" role
-create_entry_for_member_role=: Add a new membership
-create_entry_for_clinical_role=: Add a new clinical activity
-create_entry_for_attendee_role=: Add a new participation 
-create_entry_for_organizer_role=: Add a new Organizer role 
-create_entry_for_editor_role=: Add a new editor role
-create_entry_for_service_provider_role=: Add a new service provider role 
-create_entry_for_outreach_provider_role=: Add a new outreach provider role
-create_entry_for_researcher_role=: Add a new researcher role
-create_entry_for_reviewer_role=: Add a new reviewer role
-create_entry_for_teacher_role=: Add a new teaching role
+create_entry_for_head_role=: Leitungsrolle hinzufügen
+create_entry_for_member_role=: Neue Mitgliedschaft hinzufügen
+create_entry_for_clinical_role=: Neue klinische Position hinzufügen
+create_entry_for_attendee_role=: Neue Teilnehmerrolle hinzufügen
+create_entry_for_organizer_role=: Neue Organisatorenrolle hinzufügen
+create_entry_for_editor_role=: Neue Herausgeberschaft hinzufügen
+create_entry_for_service_provider_role=: Neue Dienstleisterrolle hinzufügen
+create_entry_for_outreach_provider_role=: Neue Öffentlichkeitsarbeitsrolle hinzufügen
+create_entry_for_researcher_role=: Neue Forscherrolle hinzufügen
+create_entry_for_reviewer_role=: Neue Begutachtungsrolle hinzufügen
+create_entry_for_teacher_role=: Neue Rolle in der Lehre hinzufügen
 
 
 save_changes = Änderungen speichern
 start_capitalized = Start
 end_capitalized = Ende
-institution_name=Name of Institution
-role_in_institution=Role in Institution
-presentation_name_capitalized=Title of Presentation
-role_in_presentation_capitalized=Role in Presentation
-advisee_capitalized_first_name=First Name
-advisee_capitalized_lastname=Last Name
+institution_name=Name der Institution
+role_in_institution=Rolle in der Institution
+presentation_name_capitalized=Titel der Präsentation
+role_in_presentation_capitalized=Rolle in der Präsentation
+advisee_capitalized_first_name=Vorname
+advisee_capitalized_lastname=Nachname
 
