Updated collapsed_menu_name for tenderfoot

--- a/webapp/src/main/webapp/themes/tenderfoot/i18n/all_de_DE.properties
+++ b/webapp/src/main/webapp/themes/tenderfoot/i18n/all_de_DE.properties
@@ -1,4 +1,4 @@
-collapsed_menu_name = Menu
+collapsed_menu_name = Menü
 address_street_two = Adresszusatz 1
 loading_website_image = Bild wird geladen
 view = Ansicht
