Make buttong i18n compliant

--- a/webapp/src/main/webapp/i18n/vivo_all.properties
+++ b/webapp/src/main/webapp/i18n/vivo_all.properties
@@ -834,6 +834,8 @@ create_and_link_enter_pmid_intro=You may enter one or more PubMed IDs to match. 
 create_and_link_enter_pmid_supported=Note that metadata will be retrieved from Crossref, if the PubMed ID can be resolved to a DOI.
 create_and_link_unknown_profile=Unknown Profile
 create_and_link_unknown_resource=Unknown Resource Type
+create_and_link_submit_ids=Submit IDs
+create_and_link_submit_confirm=Confirm
 create_and_link_type_article=Article
 create_and_link_type_article_journal=Journal Article
 create_and_link_type_book=Book
