Check Editor already claimed, error for no citation, PUMCIDs fixed

--- a/webapp/src/main/webapp/i18n/vivo_all.properties
+++ b/webapp/src/main/webapp/i18n/vivo_all.properties
@@ -830,12 +830,13 @@ create_and_link_finished=There are no more works left to claim.<br />You may ent
 create_and_link_go_profile=Go to profile
 create_and_link_enter_dois_intro=You may enter one or more DOIs to match, and can be entered either as an ID or URL:<br /><br />e.g.
 create_and_link_enter_dois_supported=Currently, DOIs issued by Crossref, DataCite and mEDRA are supported.<br />Each DOI should be separated by a comma, semi colon or new line.
-create_and_link_enter_pmid_intro=You may enter one or more PubMed IDs to match. Each ID should be separated by a comma, semi colon or new l
+create_and_link_enter_pmid_intro=You may enter one or more PubMed IDs to match. Each ID should be separated by a comma, semi colon or new line.
 create_and_link_enter_pmid_supported=Note that metadata will be retrieved from Crossref, if the PubMed ID can be resolved to a DOI.
 create_and_link_unknown_profile=Unknown Profile
 create_and_link_unknown_resource=Unknown Resource Type
 create_and_link_submit_ids=Submit IDs
 create_and_link_submit_confirm=Confirm
+create_and_link_error=Unable to retrieve citation details
 create_and_link_type_article=Article
 create_and_link_type_article_journal=Journal Article
 create_and_link_type_book=Book
