Internationalize ORCiD confirm an iD

--- a/webapp/src/main/webapp/i18n/vivo_all.properties
+++ b/webapp/src/main/webapp/i18n/vivo_all.properties
@@ -811,6 +811,7 @@ advisee_capitalized_first_name=First Name
 advisee_capitalized_lastname=Last Name
 
 add_orcid_id=Add an iD
+confirm_orcid_id=Confirm the ID
 
 orcid_title_add = Do you want to add an ORCID iD?
 orcid_step1_add = Step 1: Adding your ORCID iD
