--- a/webapp/src/main/webapp/i18n/vivo_all.properties
+++ b/webapp/src/main/webapp/i18n/vivo_all.properties
@@ -810,3 +810,6 @@ role_in_presentation_capitalized=Role in Presentation
 advisee_capitalized_first_name=First Name
 advisee_capitalized_lastname=Last Name
 
+label.addRoleToPersonTwoStage.start_capitalized = Start
+label.addRoleToPersonTwoStage.end_capitalized = End
+
