--- a/webapp/src/main/webapp/i18n/vivo_all_es.properties
+++ b/webapp/src/main/webapp/i18n/vivo_all_es.properties
@@ -813,3 +813,55 @@ role_in_presentation_capitalized=Role in Presentation
 advisee_capitalized_first_name=First Name
 advisee_capitalized_lastname=Last Name
 
+# Messages for creating and linking resources (publications)
+create_and_link_enter=Enter {0}:
+create_and_link_claim_for=Claiming works for<br />{0}
+create_and_link_confirm_works=Confirm your work(s)
+create_and_link_confirm_works_intro=Please check that these are the work(s) that you wish to claim, and indicate your relationship with them.
+create_and_link_authors=Authors
+create_and_link_authors_desc=If you are an author of a work, please select your name in the author list.<br />Retrieved metadata may be incomplete. If you can not see your name listed, select "Unlisted Author".
+create_and_link_editors=Editors
+create_and_link_editors_desc=If you edited the work, please select "Editor".
+create_and_link_not_mine_desc=If you do not wish to claim a work, select "This is not my work".
+create_and_link_already_claimed=You have already claimed this work.
+create_and_link_unlisted_author=Unlisted Author
+create_and_link_editor=Editor
+create_and_link_not_mine=This is not my work
+create_and_link_remaining=There are {0} ids remaining
+create_and_link_thank_you=Thank you
+create_and_link_finished=There are no more works left to claim.<br />You may enter more IDs below, or view your profile.
+create_and_link_go_profile=Go to profile
+create_and_link_enter_dois_intro=You may enter one or more DOIs to match, and can be entered either as an ID or URL:<br /><br />e.g.
+create_and_link_enter_dois_supported=Currently, DOIs issued by Crossref, DataCite and mEDRA are supported.<br />Each DOI should be separated by a comma or new line.
+create_and_link_enter_pmid_intro=You may enter one or more PubMed IDs to match. Each ID should be separated by a comma or new line.
+create_and_link_enter_pmid_supported=Note that metadata will be retrieved from Crossref, if the PubMed ID can be resolved to a DOI.
+create_and_link_unknown_profile=Unknown Profile
+create_and_link_unknown_resource=Unknown Resource Type
+create_and_link_unauthorized_for_profile=You do not have permissions to claim for this user
+create_and_link_submit_ids=Submit IDs
+create_and_link_submit_confirm=Confirm
+create_and_link_error=Unable to retrieve citation details
+create_and_link_type_article=Article
+create_and_link_type_article_journal=Journal Article
+create_and_link_type_book=Book
+create_and_link_type_chapter=Chapter
+create_and_link_type_dataset=Dataset
+create_and_link_type_figure=Image
+create_and_link_type_graphic=Image
+create_and_link_type_legal_case=Legal Case
+create_and_link_type_legislation=Legislation
+create_and_link_type_manuscript=Manuscript
+create_and_link_type_map=Map
+create_and_link_type_musical_score=Musical Score
+create_and_link_type_paper_conference=Conference Paper
+create_and_link_type_patent=Patent
+create_and_link_type_personal_communication=Letter
+create_and_link_type_post_weblog=Blog
+create_and_link_type_report=Report
+create_and_link_type_review=Review
+create_and_link_type_speech=Speech
+create_and_link_type_thesis=Thesis
+create_and_link_type_webpage=Webpage
+claim_publications_by=Claim publications by
+claim_publications_by_doi=DOI
+claim_publications_by_pmid=PubMed ID
