--- a/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
+++ b/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
@@ -449,6 +449,7 @@ co_investigator = KoforscherIn
 co_investigators = KoforscherInnen
 unique_coinvestigators_per_year = einzelne KoforscherInnen pro Jahr
 view_timeline_copi_network = Komplette Zeitleiste und KoforscherInnen-Netzwerk anzeigen.
+label.dateTimeWithPrecision.year_capitalized = Jahr
 
 #
 #  entity comparison templates ( /templates/freemarker/visualization/entitycomparison )
@@ -809,4 +810,3 @@ presentation_name_capitalized=Titel der Präsentation
 role_in_presentation_capitalized=Rolle in der Präsentation
 advisee_capitalized_first_name=Vorname
 advisee_capitalized_lastname=Nachname
-
