--- a/webapp/src/main/webapp/i18n/vivo_all_en_US.properties
+++ b/webapp/src/main/webapp/i18n/vivo_all_en_US.properties
@@ -449,6 +449,7 @@ co_investigator = co-investigator
 co_investigators = co-investigators
 unique_coinvestigators_per_year = Unique Co-Investigators per year
 view_timeline_copi_network = View full timeline and co-investigator network.
+label.dateTimeWithPrecision.year_capitalized = Year
 
 #
 #  entity comparison templates ( /templates/freemarker/visualization/entitycomparison )
@@ -809,4 +810,3 @@ presentation_name_capitalized=Title of Presentation
 role_in_presentation_capitalized=Role in Presentation
 advisee_capitalized_first_name=First Name
 advisee_capitalized_lastname=Last Name
-
