--- a/webapp/src/main/webapp/i18n/vivo_all_pt_BR.properties
+++ b/webapp/src/main/webapp/i18n/vivo_all_pt_BR.properties
@@ -460,7 +460,7 @@ co_investigator = co-investigador
 co_investigators = co-pesquisadores
 unique_coinvestigators_per_year = Único co-pesquisadores por ano
 view_timeline_copi_network = Ver cronograma completo e rede de co-investigador.
-
+label.dateTimeWithPrecision.year_capitalized =  Ano
 #
 #  entity comparison templates ( /templates/freemarker/visualization/entitycomparison )
 #
