--- a/webapp/src/main/webapp/i18n/vivo_all_es.properties
+++ b/webapp/src/main/webapp/i18n/vivo_all_es.properties
@@ -461,7 +461,7 @@ co_investigator = coinvestigador
 co_investigators = coinvestigadores
 unique_coinvestigators_per_year = Coinvestigadores únicos por año
 view_timeline_copi_network = Ver línea de tiempo completa y la red coinvestigador.
-
+label.dateTimeWithPrecision.year_capitalized = Año
 #
 #  entity comparison templates ( /templates/freemarker/visualization/entitycomparison ) 
 #
@@ -812,4 +812,3 @@ presentation_name_capitalized=Title of Presentation
 role_in_presentation_capitalized=Role in Presentation
 advisee_capitalized_first_name=First Name
 advisee_capitalized_lastname=Last Name
-
