--- a/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
+++ b/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
@@ -401,7 +401,7 @@ year_awarded = Année récompensée
 years_inclusive = Années couvertes
 award_hint = ex.: pour des prix couvrant plusieurs années
 
-educational_training_for = enregistrement d'une formation pdagogique pour
+educational_training_for = enregistrement d'une formation pédagogique pour
 select_organization_type = SVP, choisir une entrée existante pour le champ Type d'organisation.
 select_an_organization_name = SVP, choisir une entrée existante ou en saisir une nouvelle pour le champ Nom.
 select_educational_training_value = SVP, choisir une entrée dans le champ Type de formation pédagogique.
