--- a/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
+++ b/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
@@ -554,7 +554,7 @@ currently_no_grants_for = Actuellement, il n'y a aucune subvention de {0} pour
 this_investigator = ce(tte) chercheur(-euse)
 grant_s_capitalized = Subvention(s)
 co_investigator_s_capitalized = cochercheur(-euse)(s)
-incomplete_grant_data_note1 = Note: Note: Cette information est basée uniquement sur les subventions présentes dans la base de données de VIVO. Ceci peut ne représenter qu'une fraction de la production totale de la personne.
+incomplete_grant_data_note1 = Note: cette information est basée uniquement sur les subventions présentes dans la base de données de VIVO. Ceci peut ne représenter qu'une fraction de la production totale de la personne.
 incomplete_grant_data_note2 = Allez sur votre page de profil pour inscrire des informations supplémentaires concernant vos subventions.
 incomplete_grant_data_note3 = Connectez-vous pour inscrire des informations supplémentaires concernant vos subventions apparaissant sur votre page de profil.
 grants_per_year = Subventions par années
