fixed typo and unconsistent grammar

--- a/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
+++ b/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
@@ -876,8 +876,8 @@ create_and_link_finished=Aucune autre publication à revendiquer.<br />Vous pouv
 create_and_link_go_profile=Aller au profil
 create_and_link_enter_dois_intro=Vous pouvez inscrire un ou plusieurs DOIs à lier. Ils peuvent être saisis sous forme numérique ou d'URL:<br /><br />e.g.
 create_and_link_enter_dois_supported=Actuellement, les DOIs émis par Crossref, DataCite et mEDRA sont reconnus.<br />Les DOIs doivent être séparés par une virgule ou un saut de ligne.
-create_and_link_enter_pmid_intro=Vous pouvez inscrire un ou plusieurs identifiant(s) PubMed à lier. Les identifiants doivent être séparés par des virgules ou un saut de ligne.
-create_and_link_enter_pmid_supported=NLes métadonnées seront repêchées de Crossref si l'identifiant PubMed peut être lié à un DOI.
+create_and_link_enter_pmid_intro=Vous pouvez inscrire un ou plusieurs identifiant(s) PubMed à lier. Les identifiants doivent être séparés par des virgules ou des sauts de ligne.
+create_and_link_enter_pmid_supported=Les métadonnées seront repêchées de Crossref si l'identifiant PubMed peut être lié à un DOI.
 create_and_link_unknown_profile=Profil inconnu
 create_and_link_unknown_resource=Type de ressource inconnu
 create_and_link_unauthorized_for_profile=Vous n'avez pas la permission de revendiquer pour cet usager
