fixed syntax to account for context (#40)
Resolves: https://jira.lyrasis.org/browse/VIVO-1838

--- a/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
+++ b/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
@@ -482,7 +482,7 @@ with_unknown_year = avec année incertaine
 with_known_year = avec année établie
 from_current_incomplete_year = depuis l'année courante incomplète
 
-entity_comp_error_text1 = Cette organisation n'a aucune organisation subordonnée ni aucune personne qui lui est associée
+entity_comp_error_text1 = Cette organisation n'a aucune organisation subordonnée, ni aucune personne aillant des
 entity_comp_error_text2 = dans le système.
 entity_comp_error_text3 = SVP, consulter le
 entity_comp_error_text4 = complet pour de plus amples informations.
